python-testing-cpu-ram/k8s/raw/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2026-08-20T17:42:19Z"
  labels:
    app: app-base-test
    app.kubernetes.io/component: app-base-test
    app.kubernetes.io/instance: app-base-test
  name: app-base-test
  namespace: xpk
  resourceVersion: "2038947"
  uid: 5441003c-9c9d-4108-a48c-6770de4ff8ee
spec:
  clusterIP: 172.231.183.45
  clusterIPs:
  - 172.231.183.45
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: app-base-test
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
