python-testing-cpu-ram/k8s/raw/6-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-base-test
    app.kubernetes.io/component: app-base-test
    app.kubernetes.io/instance: app-base-test
  name: route-app-base-test
spec:
  host: ''
  to:
    kind: Service
    name: app-base-test
    weight: 100
  wildcardPolicy: None
