python-testing-cpu-ram/k8s/raw/httpd-24-resources.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: httpd-24
      app.kubernetes.io/component: httpd-24
      app.kubernetes.io/instance: httpd-24
      app.kubernetes.io/name: httpd-24
      app.kubernetes.io/part-of: httpd-24-app
      app.openshift.io/runtime-version: 1-140
    name: httpd-24
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      app: httpd-24
      deployment: httpd-24
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: httpd-24
      app.kubernetes.io/component: httpd-24
      app.kubernetes.io/instance: httpd-24
      app.kubernetes.io/name: httpd-24
      app.kubernetes.io/part-of: httpd-24-app
      app.openshift.io/runtime-namespace: dev-netcat
    name: httpd-24
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: httpd-24
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: httpd-24
          deployment: httpd-24
      spec:
        containers:
        - image: registry.redhat.io/ubi8/httpd-24:1-140
          name: httpd-24
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: httpd-24
      app.kubernetes.io/component: httpd-24
      app.kubernetes.io/instance: httpd-24
      app.kubernetes.io/name: httpd-24
      app.kubernetes.io/part-of: httpd-24-app
      app.openshift.io/runtime-version: 1-140
    name: httpd-24
  spec:
    host: ""
    port:
      targetPort: 8080-tcp
    tls:
      insecureEdgeTerminationPolicy: None
      termination: edge
    to:
      kind: Service
      name: httpd-24
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
